--- a/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,25 +18,15 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @await Component.InvokeAsync("CarrinhoCompraResumo")
-                    @await Component.InvokeAsync("CategoriaMenu")
-                    <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
-                    <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <form class="navbar-form navbar-right" asp-controller="Lanche" asp-action="Search" method="get">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Procurar produto" name="searchString" values="@ViewData["searchString"]">
-                        </div>
-                    </form>
-                    @await Html.PartialAsync("_LoginPartial")
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <a class="nav-link text-light" asp-area="Admin" asp-controller ="Admin" asp-action="Index">Admin</a>
-
-
-                    }
-
+                
+                <div class="navbar-collapse collapse d-sm-inline-flex">
+                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="Admin" asp-action ="Index" >Home</a>
+                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminLanches" asp-action ="Index" > Produtos</a>
+                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminCategorias" asp-action ="Index" >Categorias</a>
+                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminPedidos" asp-action ="Index" >Pedidos</a>
+                    
                 </div>
+                
             </div>
         </nav>
     </header>
