--- a/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,11 +20,13 @@
                 </button>
                 
                 <div class="navbar-collapse collapse d-sm-inline-flex">
-                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="Admin" asp-action ="Index" >Home</a>
-                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminLanches" asp-action ="Index" > Produtos</a>
-                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminCategorias" asp-action ="Index" >Categorias</a>
-                    <a class="nav-link text-light" asp-area ="Admin" asp-controller="AdminPedidos" asp-action ="Index" >Pedidos</a>
-                    
+
+                    <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Home</a>
+                    <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminLanches" asp-action="Index"> Produtos</a>
+                    <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminCategorias" asp-action="Index">Categorias</a>
+                    <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminPedidos" asp-action="Index">Pedidos</a>
+                    <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminRelatorioVendas" asp-action="Index">Relatorio Vendas</a>
+
                 </div>
                 
             </div>
