--- a/LanchesMac/Views/Shared/_Layout.cshtml
+++ b/LanchesMac/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="images/logo-removebg-preview.png" width="80"/>
                     LanchesMac
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -45,9 +46,12 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - LanchesMac
-        </div>
+        @*    <div class="container">
+        &copy; 2021 - LanchesMac
+        </div>*@
+
+        <partial name="_Footer" />
+        
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
